# img_glypher

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  img_glypher.sublime-project
build_utils/: sdl2-config-modified
include/: comparison_thread.h  freetype_interface.h  glyph_extractor.h  grayscale_bitmap.h  image_processor.h  sdl_interface.h  settings.h
src/: comparison_thread.cpp  freetype_interface.cpp  glyph_extractor.cpp  grayscale_bitmap.cpp  image_processor.cpp  img_glypher.cpp  sdl_interface.cpp  settings.cpp
tests/: CMakeLists.txt
tests/lib_tests/: CMakeLists.txt
tests/lib_tests/src/: freetype_test.cpp
